Removed lucene.validation.source-patterns.gradle and converted xml license placement validation to java. I think this is such a minor check, affecting just a handful of files, that we can remove it entirely.

--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -44,6 +44,9 @@ dependencies {
   implementation localGroovy()
   implementation deps.commons.codec
   implementation deps.randomizedtesting.runner
+  implementation deps.rat
+  implementation deps.zstd
+
   implementation deps.gjf
   implementation deps.jgit
   implementation deps.ecj
