--- a/lucene/benchmark-jmh/build.gradle
+++ b/lucene/benchmark-jmh/build.gradle
@@ -21,7 +21,7 @@ dependencies {
   moduleImplementation project(':lucene:core')
   moduleImplementation project(':lucene:expressions')
   moduleImplementation project(':lucene:sandbox')
-  moduleTestImplementation project(':lucene:test-framework')
+  moduleImplementation project(':lucene:test-framework')
 
   moduleImplementation deps.jmh.core
   annotationProcessor deps.jmh.annprocess
