Update shas of dependencies as well in autobot. #15055

--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -119,7 +119,7 @@ jobs:
         if: steps.initial-validation.outcome == 'failure'
         run: |
           echo "Fixing formatting issues and updating lock file..."
-          ./gradlew tidy writeLocks
+          ./gradlew tidy writeLocks updateLicenses
 
       - name: Check if formatting fixes were made
         if: steps.initial-validation.outcome == 'failure'
