--- a/lucene/benchmark/build.gradle
+++ b/lucene/benchmark/build.gradle
@@ -15,6 +15,8 @@
  * limitations under the License.
  */
 
+import org.apache.lucene.gradle.plugins.licenses.LicenceCheckTask
+
 plugins {
   id "java"
 }
@@ -89,4 +91,10 @@ tasks.register("run", JavaExec, {
     port = 5005
     suspend = true
   }
+})
+
+tasks.register("foo", LicenceCheckTask.class, {task ->
+  task.getInputFileTrees().from(project.fileTree("src", {
+    include "**/*.java"
+  }))
 })
