--- a/gradle/generation/forUtil.gradle
+++ b/gradle/generation/forUtil.gradle
@@ -23,7 +23,7 @@ configure(project(":lucene:core")) {
     description "Regenerate gen_ForUtil.py"
     group "generation"
 
-    def genDir = file("src/java/org/apache/lucene/codecs/lucene103")
+    def genDir = file("src/java/org/apache/lucene/codecs/lucene104")
     def genScript = file("${genDir}/gen_ForUtil.py")
     def genOutput = file("${genDir}/ForUtil.java")
 
@@ -40,31 +40,6 @@ configure(project(":lucene:core")) {
   }
 
   regenerate.dependsOn wrapWithPersistentChecksums(generateForUtilInternal, [
-          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
-          mustRunBefore: [ "compileJava" ]
-  ])
-
-  task generateForDeltaUtilInternal() {
-    description "Regenerate gen_ForDeltaUtil.py"
-    group "generation"
-
-    def genDir = file("src/java/org/apache/lucene/codecs/lucene103")
-    def genScript = file("${genDir}/gen_ForDeltaUtil.py")
-    def genOutput = file("${genDir}/ForDeltaUtil.java")
-
-    inputs.file genScript
-    outputs.file genOutput
-
-    doLast {
-      quietExec {
-        workingDir genDir
-        executable project.externalTool("python3")
-        args = [ '-B', genScript ]
-      }
-    }
-  }
-
-  regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtilInternal, [
           andThenTasks: ["spotlessJava", "spotlessJavaApply"],
           mustRunBefore: [ "compileJava" ]
   ])
@@ -244,6 +219,56 @@ configure(project(":lucene:backward-codecs")) {
   }
 
   regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtil101Internal, [
+          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
+          mustRunBefore: [ "compileJava" ]
+  ])
+
+  task generateForUtil103Internal() {
+    description "Regenerate gen_ForUtil.py"
+    group "generation"
+
+    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene103")
+    def genScript = file("${genDir}/gen_ForUtil.py")
+    def genOutput = file("${genDir}/ForUtil.java")
+
+    inputs.file genScript
+    outputs.file genOutput
+
+    doLast {
+      quietExec {
+        workingDir genDir
+        executable project.externalTool("python3")
+        args = [ '-B', genScript ]
+      }
+    }
+  }
+
+  regenerate.dependsOn wrapWithPersistentChecksums(generateForUtil103Internal, [
+          andThenTasks: ["spotlessJava", "spotlessJavaApply"],
+          mustRunBefore: [ "compileJava" ]
+  ])
+
+  task generateForDeltaUtil103Internal() {
+    description "Regenerate gen_ForDeltaUtil.py"
+    group "generation"
+
+    def genDir = file("src/java/org/apache/lucene/backward_codecs/lucene103")
+    def genScript = file("${genDir}/gen_ForDeltaUtil.py")
+    def genOutput = file("${genDir}/ForDeltaUtil.java")
+
+    inputs.file genScript
+    outputs.file genOutput
+
+    doLast {
+      quietExec {
+        workingDir genDir
+        executable project.externalTool("python3")
+        args = [ '-B', genScript ]
+      }
+    }
+  }
+
+  regenerate.dependsOn wrapWithPersistentChecksums(generateForDeltaUtil103Internal, [
           andThenTasks: ["spotlessJava", "spotlessJavaApply"],
           mustRunBefore: [ "compileJava" ]
   ])
