Move more gradle plugins to java. Remove Apache Rat dependency. (#15195)
* Correct package path in ProfileResults.

* Moved lucene.java.slowest-tests-at-end.gradle, modernizing the implementation a bit.

* Moved lucene.java.show-failed-tests-at-end.gradle to java.

* Remove owasp plugin support without a replacement #15114

* Interim.

* Playing with new rat's api. To be reverted.

* Remove apache rat dependency entirely (license check temporarily turned off).

* Added a custom check licenses task. Added an initial set of licenses.

* Move license check configuration to a plugin.

* Linter changes.

* Remove a require that creeped in somehow.

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
-import org.apache.lucene.gradle.plugins.misc.CheckEnvironmentPlugin
-import org.apache.lucene.gradle.plugins.spotless.GoogleJavaFormatPlugin
+import org.apache.lucene.gradle.plugins.licenses.CheckLicensesTask
 
 /*
  * Licensed to the Apache Software Foundation (ASF) under one or more
@@ -27,15 +26,11 @@ plugins {
   id "lucene.root-project.setup"
   id "lucene.java-projects.conventions"
 
-  id "lucene.java.slowest-tests-at-end"
-  id "lucene.java.show-failed-tests-at-end"
   id "lucene.java.modules"
 
   id "lucene.validation.gradle-versions-cleanup"
   id "lucene.validation.error-prone"
   id "lucene.validation.jar-checks"
-  id "lucene.validation.rat-sources"
-  id "lucene.validation.owasp"
 
   id "lucene.publications.maven"
   id "lucene.publications.maven-to-nexus-releases"
