Use git-ls-files as the source of file paths for license checks.

--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.apache.lucene.gradle.plugins.gitinfo.GitInfoExtension
 import org.apache.lucene.gradle.plugins.licenses.CheckLicensesTask
 
 /*
