--- a/.github/workflows/activity-report.yml
+++ b/.github/workflows/activity-report.yml
@@ -1,5 +1,7 @@
 name: "Generate project activity report"
 
+permissions: {}
+
 on:
   workflow_dispatch:
     inputs:
@@ -17,16 +19,24 @@ on:
 
 jobs:
   generate:
+    name: Project Activity
     timeout-minutes: 15
+    permissions:
+      issues: read # inspects issues and reports on them
+      pull-requests: read # inspects PRs and reports on them
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - name: Checkout repository
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
         with:
           fetch-depth: 0
+          persist-credentials: false
 
-      - name: generate report
+      - name: Generate report
+        run: |
+          bash ./.github/workflows/activity-report.sh >> "$GITHUB_STEP_SUMMARY"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          SINCE="${{ inputs.since }}" UNTIL="${{ inputs.until }}" bash ./.github/workflows/activity-report.sh >> $GITHUB_STEP_SUMMARY
+          SINCE: ${{ inputs.since }}
+          UNTIL: ${{ inputs.until }}
