Upgrade to Java 25 + Gradle 9.1.0

--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
@@ -31,7 +31,7 @@ allprojects {
     }
 
     dependencies {
-      missingdoclet project(":lucene:build-tools:missing-doclet")
+      missingdoclet project(":build-tools:missing-doclet")
     }
 
     project.ext {
