--- a/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.regenerate.antlr.gradle
@@ -15,6 +15,8 @@
  * limitations under the License.
  */
 
+import org.apache.lucene.gradle.plugins.help.ExecOperationsProvider
+
 configure(project(":lucene:expressions")) {
   configurations {
     antlr
@@ -49,8 +51,9 @@ configure(project(":lucene:expressions")) {
     doFirst {
       project.delete tempOutput
 
-      project.javaexec {
-        main = "org.antlr.v4.Tool"
+      def execOps = objects.newInstance(ExecOperationsProvider).execOperations
+      execOps.javaexec {
+        mainClass = "org.antlr.v4.Tool"
         classpath = configurations.antlr
 
         ignoreExitValue = false
