--- a/settings.gradle
+++ b/settings.gradle
@@ -89,9 +89,5 @@ include "lucene:spatial-test-fixtures"
 include "lucene:suggest"
 include "lucene:test-framework"
 
-include "lucene:build-tools:missing-doclet"
-include "lucene:build-tools:build-infra-shadow"
-
-// tweak the physical path for build-tools.
-project(":lucene:build-tools:missing-doclet").projectDir = file("build-tools/missing-doclet")
-project(":lucene:build-tools:build-infra-shadow").projectDir = file("build-tools/build-infra-shadow")
+include "build-tools:missing-doclet"
+include "build-tools:build-infra-shadow"
