ci: add actionlint and zizmor workflows for linting/scanning actions
Add .github/actionlint.yaml and .github/workflows/actions.yml to enable
workflow validation with actionlint and security scanning with zizmor.

High severity issues are addressed but other issues remain. This is just
an incremental step

--- a/.github/workflows/label-pull-request.yml
+++ b/.github/workflows/label-pull-request.yml
@@ -9,6 +9,8 @@
 name: "Pull Request Labeler"
 run-name: Labelling pull request with module tags based on changed files in the PR
 on:
+  # see labeler docs for explanation
+  # zizmor: ignore[dangerous-triggers]
   - pull_request_target
 
 jobs:
