ci: ignore shellcheck SC2236 style issue in actionlint config

--- a/.github/actionlint.yaml
+++ b/.github/actionlint.yaml
@@ -19,4 +19,6 @@ paths:
     ignore:
       # style issue
       - 'shellcheck reported issue in this script: SC2129:.+'
+      # TODO: another style issue
+      - 'shellcheck reported issue in this script: SC2236:.+'
 
