Fix SmartChinese to only deserialize data from classpath with a native array filter applied and never cache dictionaries from custom locations (#15237)
* Fix SmartChinese to only serialize data from classpath with a native array filter applied and never cache dictionaries from custom locations

* fix exception handling

* add CHANGES.txt

* fix exception handling

* fix typo in CHANGES.txt

* Restore the code to regenerate the serialized file

* Disallow any serialization in test-framework as early as possible (we can't do that via sysprops due to Gradle)

* Install a serialization filter that only allows Gradle's test runner config deserialization

* fix errorprone

* use same logic like for security manager to install the filter

* add new filter to CHANGES.txt

* Improve performance by only installing a filter if we're not called from Gradle

* simplify

* Add a test for the deserialization filter

* fix typo

* improve test
# Conflicts:
#	build-tools/build-infra/src/main/java/org/apache/lucene/gradle/plugins/java/TestsAndRandomizationPlugin.java
#	lucene/analysis/smartcn/src/java/org/apache/lucene/analysis/cn/smart/hhmm/WordDictionary.java

--- a/gradle/testing/randomization.gradle
+++ b/gradle/testing/randomization.gradle
@@ -218,6 +218,14 @@ allprojects {
           securityArgumentProvider.otherProperties.put("lucene.test.framework", project(":lucene:test-framework").layout.buildDirectory.get().asFile.absolutePath)
         }
 
+        // disallow any Java serialization without a filter
+        if (project.path.endsWith(".tests")) {
+          // LUCENE-10301: for now, do not use the serialization filter for modular tests
+          // (test framework is not available).
+        } else if (project.path.startsWith(":lucene")) {
+          systemProperty 'jdk.serialFilterFactory', 'org.apache.lucene.tests.util.TestObjectInputFilterFactory'
+        }
+
         doFirst {
           logger.debug("Will use test opts:\n" + testOptionsResolved.collect {k,v -> "${k}: ${v}"}.sort().join("\n"))
         }
