Switch to pre-release ecj I20250926-1800 and add the necessary infrastructure to run against pre-release ecj versions. Gradle has become terrible.

--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -24,6 +24,8 @@ repositories {
   gradlePluginPortal()
 }
 
+apply from: rootProject.file("build-tools/build-infra/ecj-source.gradle")
+
 // Convert a plugin dependency to a regular dependency so that we can
 // use [plugins] section in the top-level toml but declare regular
 // project dependencies here.
