Reuse the same external script in settings.gradle with some sprinkled magic.

--- a/build-tools/build-infra/ecj-source.gradle
+++ b/build-tools/build-infra/ecj-source.gradle
@@ -21,7 +21,7 @@
 // we redirect dependency resolution to our own s3-based "maven repository" just for
 // the ecj jar.
 
-boolean useDropMirrorForEcj = deps.versions.ecj.get() in ["4.36M1", "I20250926-1800"]
+boolean useDropMirrorForEcj = true
 if (useDropMirrorForEcj) {
   repositories {
     exclusiveContent {
