--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,10 @@ plugins {
 
 description = 'Grandparent project for Apache Lucene Core'
 
-// Turn off all forbidden-apis tasks until it supports JDK 25;
+// Force forbidden-apis tasks to use JDK 24 signatures until it supports JDK 25;
 // https://github.com/policeman-tools/forbidden-apis/pull/272
 allprojects {
   tasks.withType(CheckForbiddenApis.class).configureEach {
-    enabled = false
+    targetCompatibility = "24"
   }
 }
