Add gradlew eclipse to the set of checked commands upon gradle upgrade. #15250.

--- a/.github/workflows/run-checks-gradle-upgrade.yml
+++ b/.github/workflows/run-checks-gradle-upgrade.yml
@@ -98,6 +98,7 @@ jobs:
       - run: ./gradlew licenses updateLicenses
       - run: ./gradlew check -x test
       - run: ./gradlew assembleRelease mavenToLocal
+      - run: ./gradlew eclipse
 
       # Conserve resources: only run these in non-alt-java mode.
       - run: ./gradlew getGeoNames
