--- a/.github/workflows/label-pull-request.yml
+++ b/.github/workflows/label-pull-request.yml
@@ -13,18 +13,22 @@ on:
   # zizmor: ignore[dangerous-triggers]
   - pull_request_target
 
+permissions: {}
+
 jobs:
   labeler:
+    name: Label PRs
     # only run on the main Lucene repository.
     if: (github.repository == 'apache/lucene')
 
     permissions:
-      contents: read
-      pull-requests: write
+      contents: read # likely not needed for public repository
+      pull-requests: write # manipulate existing labels
 
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
+      - name: Run Labeler action
+        uses: actions/labeler@8558fd74291d67161a8a78ce36a881fa63b766a9 # v5.0.0
         with:
           sync-labels: true
