--- a/.github/workflows/mark-stale-PRs.yml
+++ b/.github/workflows/mark-stale-PRs.yml
@@ -10,15 +10,19 @@ on:
   # Or run on demand
   workflow_dispatch:
 
+permissions: {}
+
 jobs:
   stale:
+    name: Mark stale PRs
     runs-on: ubuntu-latest
 
     permissions:
-      pull-requests: write
+      pull-requests: write # must comment/label PRs
 
     steps:
-      - uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9.1.0
+      - name: Run stale PR action
+        uses: actions/stale@5bef64f19d7facfb25b37b414482c7164d639639 # v9.1.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
