--- a/.github/workflows/run-special-checks-sandbox.yml
+++ b/.github/workflows/run-special-checks-sandbox.yml
@@ -12,6 +12,8 @@ on:
       - 'main'
       - 'branch_10x'
 
+permissions: {}
+
 jobs:
   faiss-tests:
     name: tests for the Faiss codec (v${{ matrix.faiss-version }} with JDK ${{ matrix.java }} on ${{ matrix.os }})
@@ -37,10 +39,14 @@ jobs:
           conda-remove-defaults: 'true'
 
       - name: Install Faiss
-        run: mamba install faiss-cpu=${{ matrix.faiss-version }}
+        run: mamba install faiss-cpu="${FAISS_VERSION}"
+        env:
+          FAISS_VERSION: ${{ matrix.faiss-version }}
 
       - name: Checkout Lucene
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+        with:
+          persist-credentials: false
 
       - name: Prepare Lucene workspace
         uses: ./.github/actions/prepare-for-build
