--- a/.asf.yaml
+++ b/.asf.yaml
@@ -24,10 +24,25 @@ github:
 
   protected_branches:
     main: {}
+    branch_10_0: {}
+    branch_10_1: {}
+    branch_10_2: {}
+    branch_10_3: {}
     branch_10x: {}
+    branch_9_0: {}
+    branch_9_1: {}
+    branch_9_2: {}
+    branch_9_3: {}
+    branch_9_4: {}
+    branch_9_5: {}
+    branch_9_6: {}
+    branch_9_7: {}
+    branch_9_8: {}
+    branch_9_9: {}
+    branch_9_10: {}
+    branch_9_11: {}
+    branch_9_12: {}
     branch_9x: {}
-    "branch_*": {}
-    "test_*": {}
 
   protected_tags:
     - "releases/*"
