--- a/build-tools/build-infra-shadow/build.gradle
+++ b/build-tools/build-infra-shadow/build.gradle
@@ -63,6 +63,7 @@ dependencies {
   implementation plugin(deps.plugins.spotless)
   implementation plugin(deps.plugins.undercouch.download)
   implementation plugin(deps.plugins.jacocolog)
+  implementation plugin(deps.plugins.versionCatalogUpdate)
 }
 
 tasks.matching {
