--- a/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
+++ b/build-tools/build-infra/src/main/groovy/lucene.documentation.render-javadoc.gradle
@@ -116,7 +116,7 @@ allprojects {
       ("https://junit.org/junit4/javadoc/${junitVersion}/".toString()): junitJavadocPackages
     ]
 
-    luceneDocUrl = provider({ rootProject.luceneDocUrl })
+    luceneDocUrl = project.rootProject.buildOptions.getOption('lucene.javadoc.url').asStringProvider()
 
     // Set up custom doclet.
     dependsOn configurations.missingdoclet
