--- a/.github/workflows/run-checks-all.yml
+++ b/.github/workflows/run-checks-all.yml
@@ -88,7 +88,7 @@ jobs:
         uses: ./.github/actions/prepare-for-build
 
       - name: Run gradle tests
-        run: ./gradlew test "-Ptask.times=true" --max-workers 2
+        run: ./gradlew test -Ptask.times=true -Pvalidation.errorprone=false --max-workers 2
 
       - name: List automatically-initialized gradle.properties
         run: cat gradle.properties
