Added support for skipping explicit dependencies of the source regenerate task.

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ plugins {
   // TODO: move to java.
   id 'regenerate.forUtil'
   id 'regenerate.antlr'
+  id 'regenerate.icu'
 
   id "lucene.validation.jar-checks"
 }
